[project]
name = "project-archeive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.13.2",
  "apify-client>=1.12.0",
  "asyncio>=4.0.0",
  "dotenv>=0.9.9",
  "google-api-python-client>=2.187.0",
  "google-genai>=1.55.0",
  "grpcio>=1.76.0",
  "ipykernel>=7.1.0",
  "isodate>=0.7.2",
  "langchain-community>=0.4.1",
  "langchain-openai>=1.0.2",
  "langchain-pinecone>=0.2.13",
  "langchain-tavily>=0.2.13",
  "langchain-text-splitters>=1.0.0",
  "langchain[openai]>=1.0.5",
  "langextract>=1.1.1",
  "langgraph>=1.0.3",
  "langgraph-cli[inmem]>=0.4.11",
  "matplotlib>=3.10.8",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "pinecone>=7.3.0",
  "pydantic>=2.0.0",
  "pydantic-core>=2.41.5",
  "pymongo>=4.15.5",
  "python-dotenv>=1.2.1",
  "rich>=14.2.0",
  "scikit-learn>=1.8.0",
  "scipy>=1.16.3",
  "sqlalchemy>=2.0.44",
  "supabase>=2.18.1",
  "tiktoken>=0.12.0",
  "youtube-transcript-api>=1.2.3",
  "yt-dlp>=2025.12.8",
]
